force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/CASE_IP_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_IP_RECID__c</fullName>
    <description>CASE_IP_RECID</description>
    <externalDeveloperName>CASE_IP_RECID</externalDeveloperName>
    <label>Case IP RecId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>