force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/CONTRACT_CASE_NUM__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_CASE_NUM__c</fullName>
    <description>CONTRACT_CASE_NUM</description>
    <externalDeveloperName>CONTRACT_CASE_NUM</externalDeveloperName>
    <label>Case Contract Case Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>