force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/COUNTRY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_CODE__c</fullName>
    <description>COUNTRY_CODE</description>
    <externalDeveloperName>COUNTRY_CODE</externalDeveloperName>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>