force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/FILE_DATE__c.field-meta.xml
<CustomField>
    <fullName>FILE_DATE__c</fullName>
    <description>FILE_DATE</description>
    <externalDeveloperName>FILE_DATE</externalDeveloperName>
    <label>File Date</label>
    <type>Date</type>
</CustomField>