force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/IP_RECID__c.field-meta.xml
<CustomField>
    <fullName>IP_RECID__c</fullName>
    <description>IP_RECID</description>
    <externalDeveloperName>IP_RECID</externalDeveloperName>
    <label>Serial Number</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_IP_VIEW__x</referenceTo>
    <relationshipLabel>Case Patents</relationshipLabel>
    <relationshipName>Case_Patents</relationshipName>
    <type>ExternalLookup</type>
</CustomField>