force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/IP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>IP_STATUS__c</fullName>
    <description>IP_STATUS</description>
    <externalDeveloperName>IP_STATUS</externalDeveloperName>
    <label>IP Status Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>