force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/IP_TYPE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>IP_TYPE_DESCRIPTION__c</fullName>
    <description>IP_TYPE_DESCRIPTION</description>
    <externalDeveloperName>IP_TYPE_DESCRIPTION</externalDeveloperName>
    <label>IP Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>