force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/PATENT_ISSUED_DATE__c.field-meta.xml
<CustomField>
    <fullName>PATENT_ISSUED_DATE__c</fullName>
    <description>PATENT_ISSUED_DATE</description>
    <externalDeveloperName>PATENT_ISSUED_DATE</externalDeveloperName>
    <label>Patent Issued Date</label>
    <type>Date</type>
</CustomField>