force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/PATENT_NUM__c.field-meta.xml
<CustomField>
    <fullName>PATENT_NUM__c</fullName>
    <description>PATENT_NUM</description>
    <externalDeveloperName>PATENT_NUM</externalDeveloperName>
    <label>Patent Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>