force-app/main/default/objects/Forrester_SHIR_CASE_IP_VIEW__x/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <description>TITLE</description>
    <externalDeveloperName>TITLE</externalDeveloperName>
    <label>IP Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>